liveness-py.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: py-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: py-flask
  template:
    metadata:
      labels:
        app: py-flask
    spec:
      containers:
      - name: python-docker-flask
        image: aikanshp/python-docker-repo
        ports:
        - name: flask-port
          containerPort: 5000
        livenessProbe: 
          httpGet:
            path: /
            port: flask-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: flask-port
          initialDelaySeconds: 15
          timeoutSeconds: 30
