pod-configmap.yml
apiVersion: v1
kind: Pod
metadata:
    name: configmap-demo-pod
spec:
    containers:
    - name: demo
      image: alpine
      command: ["sleep", "3600"]
