pod-v1.yml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-1
  labels:
    app: helloworld-1
spec:
  containers:
  - name: k8s-demo
    image: arjunachari12/k8s-demo
    ports:
    - name: nodejs-port
      containerPort: 3000
