pod-v2.yml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-2
  labels:
    app: helloworld-2
spec:
  containers:
  - name: k8s-demo-2
    image: arjunachari12/k8s-demo:2
    ports:
    - name: nodejs-port
      containerPort: 3000
