pod2.yml
apiVersion: v1
kind: Pod
metadata: 
  name: pod-new
spec:
  containers:
  - name: webserver
    image: nginx:latest
    ports:
    - containerPort: 80
  - name: webwatcher
    image: afakharany/watcher:latest
