sql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-demo
spec:
  containers:
  - name: mysql-demo
    image: mysql
    ports:
      - containerPort: 3306
